# pawacloud-assistant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  fly.backend.toml  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
.husky/: pre-commit  pre-push
backend/: .env.example  .gcloudignore  Dockerfile  requirements.txt
backend/app/: main.py
backend/scripts/: make-fixtures.py
backend/tests/: test_api.py  test_document_processing.py  test_documents_api.py
docs/: ARCHITECTURE.md  EVALUATION.md  LINKEDIN_POST.md  PROMPTS.md  documents.md  growth_playbook.md  linkedin_post.md  qa_documents.md
frontend/: .dockerignore  .env.example  Dockerfile  fly.toml  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: ArtifactCard.tsx  ArtifactOutputBubble.tsx  CameraCapture.tsx  ChatInput.tsx  DocumentUploadDialog.tsx  DownloadMenu.tsx  FadeIn.tsx  Footer.tsx  Header.tsx  HistoryPanel.tsx  InstallPrompt.tsx  LanguagePicker.tsx  MessageBubble.tsx  MetricsChart.tsx  Snackbar.tsx  SystemStatus.tsx  ThemeToggle.tsx  (+1 more)
infra/: artifact_registry.tf  cloud_run.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
rust-core/: Cargo.toml
rust-core/src/: document.rs  lib.rs  markdown.rs  response.rs  text.rs
scripts/: deploy-backend.sh  deploy-frontend.sh
(+33 files in other folders)
